refactor(signing): simplify context variable usage
refactor(signing): simplify method signatures and improve readability

chore(cleanup): remove debug print statements

refactor(jwt): improve JSON comparison logic