@@ -56,7 +56,7 @@ public class JadesHeaderBuilderServiceImpl implements JadesHeaderBuilderService 
             throw new IllegalArgumentException("No signing algorithm found in certificate info");
         }
 
-        return switch (oids.get(0)) {
+        return switch (oids.getFirst()) {
             case "1.2.840.10045.4.3.2" -> "ES256";
             case "1.2.840.10045.4.3.3" -> "ES384";
             case "1.2.840.10045.4.3.4" -> "ES512";
@@ -64,7 +64,7 @@ public class JadesHeaderBuilderServiceImpl implements JadesHeaderBuilderService 
             case "1.2.840.113549.1.1.12" -> "RS384";
             case "1.2.840.113549.1.1.13" -> "RS512";
             case "1.2.840.113549.1.1.10" -> "PS256";
-            default -> throw new IllegalArgumentException("Unsupported OID: " + oids.get(0));
+            default -> throw new IllegalArgumentException("Unsupported OID: " + oids.getFirst());
         };
     }
 }
